[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[package]
name = "zaals_finance"
version = "0.1.0"
edition = "2021"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[[test]]
name = "nft_program"
path = "tests/nft_program.rs"

[[test]]
name = "capital_program"
path = "tests/capital_program.rs"

[dev-dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
litesvm = "0.8.2"
solana-sdk = "3.0.0"
zaals-finance-client = {path = "codama/clients/rust"}

