[package]
name = "nft_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
mpl-core = { version = "0.11.1", features = ["anchor"] }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(target_os, values("solana"))',
] }

[dev-dependencies]
litesvm = "0.8.2"
